--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@testing-library/user-event": "^7.2.1",
     "firebase": "^7.19.0",
     "gsap": "^3.5.0",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-slideshow-image": "^3.1.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   },
