--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "@testing-library/user-event": "^7.2.1",
     "firebase": "^7.19.0",
     "framer-motion": "^2.6.3",
-    "gsap": "^3.5.0",
+    "gsap": "^3.5.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-confirm-alert": "^2.6.2",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
     "react-modal": "^3.11.2",
