--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gsap": "^3.5.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-awesome-slider": "^4.1.0",
     "react-confirm-alert": "^2.6.2",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
