--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-scroll": "^1.8.1",
     "react-slideshow-image": "^3.1.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0",
+    "uuid": "^8.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
