--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "3.4.3",
     "react-scroll": "^1.8.1",
     "react-slideshow-image": "^3.1.0",
+    "react-stripe-checkout": "^2.6.3",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
